<resources>
    <string name="app_name">Home</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="google_place_api">AIzaSyBm9cZYG2jeeHyOuB0WmnAe6zFJlOAR8I8</string>

    <string-array name="tabs">
        <item>TAB1</item>
        <item>TAB2</item>
        <item>TAB3</item>


    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscription_key">c16ccb9c529d482e90b9acead3aae75d</string>
    <string name="add_person">Add Person</string>
    <string name="new_message_notification_title_template">New message:</string>
    <string name="person_group_tip">- Tap on a person to edit.\n- Long press to delete.</string>
    <string name="person_name">Person name:</string>
    <string name="type_in_person_group_name_tip">Name (within 30 characters)</string>
    <string name="person_group_name">Person group name:</string>
    <string name="no_person_group_selected_for_identification_warning">No person group selected</string>
    <string name="face_cannot_be_identified">Unknown person</string>
    <string name="add_person_group">Add Person Group</string>
    <string name="person_group_list_tip">- Tap on a group to edit.\n- Long tap to delete.</string>
    <string name="type_in_person_name_tip">Name (within 30 characters)</string>
    <string name="person_tip">- Long press on a face to delete.</string>
    <string name="add_face">Add Face</string>
    <string name="done_and_save">Save</string>
    <string name="user_provided_person_group_name">Person group name</string>
    <string name="user_provided_person_group_description_data">User data</string>
    <string name="target_image">Target image</string>
    <string name="select_image">Select\nImage</string>
    <string name="detection">Detection</string>
    <string name="person_groups">Person Groups</string>
    <string name="manage_person_groups">Manage\nPerson\nGroups</string>
    <string name="faces">Faces in image</string>
    <string name="identify">Identify</string>
    <string name="view_log">View Log</string>
    <string name="user_provided_person_name">Person name</string>
    <string name="user_provided_description_data">User data</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="delete">Delete</string>
    <string name="person_name_empty_warning_message">Person name cannot be empty</string>
    <string name="select_face_tip">Select this person\'s faces (if exist) by click on the checkbox.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="User_Name">USERNAME</string>
    <string name="city">CITY</string>
    <string name="country">COUNTRY</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="gender">GENDER</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_username">Invalid Name</string>
    <string name="error_invalid_cityorcountry">Invalid City or Country</string>

</resources>
