<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    app:cardCornerRadius="10dp"

    android:background="@drawable/rounded1"
    tools:context="com.example.mahmoudfcih.simpleblogapp.persongroupmanagement.PersonActivity">
    <LinearLayout
    android:id="@+id/person_name_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical"
    android:layout_alignParentTop="true"

    android:layout_marginBottom="@dimen/view_margin">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:text="@string/person_name" />
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/sercretimg"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name (within 30 characters)"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_underlineColor="#fff"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/ic_action_name"
            app:met_iconPadding="0dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edit_person_name"
            />




        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/title_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_underlineColor="#fff"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/ic_action_name"
            app:met_iconPadding="0dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edit_person_name"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/description_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Descreption"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="?colorAccent"
            app:met_underlineColor="#fff"
            app:met_singleLineEllipsis="true"
            app:met_iconLeft="@drawable/ic_action_name"
            app:met_iconPadding="0dp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/edit_person_name"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Add location"
        android:drawableLeft="@drawable/ic_placeholder_black_24dp"
        android:textSize="18dp"
        android:drawablePadding="16dp"
        android:id="@+id/location_post"
        android:textColor="@color/white"
        android:layout_below="@+id/description_post"
        android:paddingBottom="10dp"
        />
    <TextView
        android:visibility="invisible"
        android:id="@+id/person_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/info"
        android:layout_marginBottom="@dimen/view_margin"
        android:text="@string/person_tip" />


    <GridView
        android:id="@+id/gridView_faces"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/location_post"
        android:layout_above="@id/person_tip"
        android:numColumns="3"
        android:visibility="invisible"
        android:verticalSpacing="@dimen/view_margin"
        android:horizontalSpacing="@dimen/view_margin"
        android:layout_marginBottom="@dimen/view_margin"
        android:gravity="center" />
    <TextView
        android:id="@id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_bar"
        android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:textColor="@color/white"
            android:id="@+id/add_face"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginEnd="@dimen/view_margin"
            android:text="@string/add_face"
            android:onClick="addFace"
            android:background="@drawable/rounded"
             />

        <Button
            android:textColor="@color/white"
            android:background="@drawable/rounded"
            android:id="@+id/done_and_save"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/done_and_save"
            android:onClick="doneAndSave"
             />

    </LinearLayout>


</RelativeLayout>
